<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_loginTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_emailAddressLabel"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_emailAddress"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_passwordLabel"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿No tienes cuenta? Regístrate"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¿Olvidaste tu contraseña?"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_loginButton"
            android:minWidth="160dp"/>
    </LinearLayout>

</LinearLayout>