<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_categoryTitle"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/categoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/buttonCategory3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_Button3"
            android:minWidth="160dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_test"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"/>
</LinearLayout>